# garu-io-projects-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.amd64  Dockerfile.arm32v7  Makefile  README.md
.github/workflow/: buildx.yml
.github/workflows/: main.yml
kubernetes/: 0_namespace.yml  deployment.yml  ingress.yml  kustomization.yaml  service.yml
src/: github.rs  main.rs  models.rs
