[package]
name = "garu-io-projects-api"
version = "0.1.0"
authors = ["GaruGaru <garuglieritommaso.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_derive = "1.0.106"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
lru_time_cache = "0.10.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]