[package]
name = "garu-io-projects-api"
version = "0.1.0"
authors = ["GaruGaru <garuglieritommaso.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pocketcache = "0.0.1"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
serde_derive = "1.0.106"
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
http = "0.2.4"

opentelemetry-jaeger = "0.14.0"
opentelemetry-http = "0.4.0"
opentelemetry = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
